--- a/blog/templates/main/home.html
+++ b/blog/templates/main/home.html
@@ -1,1 +1,10 @@
-<h1>This is the home page!!!1</h1>
+<html>
+  <head>
+    {% load static %}
+    <link href="{% static 'src/styles.css' %}" , rel="stylesheet" />
+    <title>Home</title>
+  </head>
+  <body>
+    <h1 class="text-blue-300">Hello, this is the home page!</h1>
+  </body>
+</html>
