create-page-formatted

--- a/blog/templates/main/create_blog.html
+++ b/blog/templates/main/create_blog.html
@@ -14,49 +14,40 @@
       <div class="p-8">
         <div class="flex gap-4">
           <input
-            type="Name"
-            name="name"
+            type="text"
+            name="title"
             class="mt-1 block w-1/2 rounded-md border border-slate-300 bg-white px-3 py-4 placeholder-slate-400 shadow-sm placeholder:font-semibold placeholder:text-gray-500 focus:border-sky-500 focus:outline-none focus:ring-1 focus:ring-sky-500 sm:text-sm"
-            placeholder="Full Name *"
+            placeholder="Title *"
           />
           <input
-            type="email"
-            name="email"
+            type="text"
+            name="subtitle"
             class="mt-1 block w-1/2 rounded-md border border-slate-300 bg-white px-3 py-4 placeholder-slate-400 shadow-sm placeholder:font-semibold placeholder:text-gray-500 focus:border-sky-500 focus:outline-none focus:ring-1 focus:ring-sky-500 sm:text-sm"
-            placeholder="Email *"
+            placeholder="Subtitle *"
           />
         </div>
         <div class="my-6 flex gap-4">
-          <select
-            name="select"
-            id="select"
-            class="block w-1/2 rounded-md border border-slate-300 bg-white px-3 py-4 font-semibold text-gray-500 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-1 focus:ring-sky-500 sm:text-sm"
-          >
-            <option class="font-semibold text-slate-300">Please Select</option>
-          </select>
-          <select
-            name="select"
-            id="select"
-            class="block w-1/2 rounded-md border border-slate-300 bg-white px-3 py-4 font-semibold text-gray-300 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-1 focus:ring-sky-500 sm:text-sm"
-          >
-            <option class="font-semibold text-slate-300">4:00 Available</option>
-          </select>
+          <input
+            type="file"
+            name="image"
+            class="mt-1 block w-1/2 rounded-md border border-slate-300 bg-white px-3 py-4 placeholder-slate-400 shadow-sm placeholder:font-semibold"
+          />
         </div>
         <div class="">
           <textarea
-            name="textarea"
+            name="description"
             id="text"
             cols="30"
             rows="10"
             class="mb-10 h-40 w-full resize-none rounded-md border border-slate-300 p-5 font-semibold text-gray-300"
           >
-Message</textarea
+Descripton</textarea
           >
         </div>
         <div class="text-center">
           <a
             class="cursor-pointer rounded-lg bg-blue-700 px-8 py-5 text-sm font-semibold text-white"
-            >Book Appoinment</a
+            >Create blog</a
           >
         </div>
       </div>
