--- a/blog/templates/main/create_blog.html
+++ b/blog/templates/main/create_blog.html
@@ -12,7 +12,7 @@
       <div class="mt-10 text-center font-bold">Wanna create blog ?</div>
       <div class="mt-3 text-center text-4xl font-bold">Create Blog</div>
       <div class="p-8">
-        <form action="/blog/create/" method="POST">
+        <form action="/blog/create/" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="flex gap-4">
             <input
