--- a/blog/templates/main/edit_blog.html
+++ b/blog/templates/main/edit_blog.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>Edit</title>
     {% load static %}
     <link href="{% static 'src/styles.css' %}" rel="stylesheet" />
   </head>
