--- a/blog/templates/main/home.html
+++ b/blog/templates/main/home.html
@@ -21,6 +21,7 @@
           <p class="text-gray-700 text-base">
             {{blog.subtitle}}
           </p>
+          <a href="/blog/{{blog.id}}">See more</a>
         </div>
       </div>
       {% endfor %}
