--- a/blog/templates/main/single_blog.html
+++ b/blog/templates/main/single_blog.html
@@ -50,6 +50,10 @@
                     <button class='bg-red-400 p-2'>Delete me </button>
                 </form>
 
+                <form action="{% url 'edit_blog' blog.id %}">
+                    <button class='bg-yellow-400 p-2'>Edit Blog</button>
+                </form>
+
             </div>
 
         </div>
