--- a/blog/templates/main/home.html
+++ b/blog/templates/main/home.html
@@ -5,12 +5,12 @@
     <link href="{% static 'src/styles.css' %}" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="bg-gray-50">
     {% include '../components/_navbar.html' %}
 
     <div class="flex flex-wrap space-x-8 p-8">
       {% for blog in blogs %}
-      <div class="max-w-sm rounded overflow-hidden shadow-lg m-4">
+      <div class="max-w-sm rounded overflow-hidden shadow-lg m-4 transform transition duration-300 hover:scale-105 hover:shadow-2xl">
         <img
           class="w-full"
           src="{{blog.image.url}}"
@@ -21,12 +21,17 @@
           <p class="text-gray-700 text-base">
             {{blog.subtitle}}
           </p>
-          <a href="/blog/{{blog.id}}">See more</a>
+          <div class="mt-4">
+            <a href="/blog/{{blog.id}}">
+              <button class="bg-black text-white px-4 py-2 rounded-lg hover:bg-gray-800 transition duration-200">
+                See more
+              </button>
+            </a>
+          </div>
         </div>
       </div>
       {% endfor %}
     </div>
 
-    <!-- https://play.tailwindcss.com/eCfibrSI2X -->
   </body>
 </html>
