--- a/blog/templates/main/single_blog.html
+++ b/blog/templates/main/single_blog.html
@@ -1,65 +1,67 @@
 <html>
 <head>
-<title>Single</title>
-{% load static %}
-<link href="{% static 'src/styles.css' %}" rel="stylesheet" />
-
+  <title>Single Blog</title>
+  {% load static %}
+  <link href="{% static 'src/styles.css' %}" rel="stylesheet" />
 </head>
 
 <body>
-
-
-
-{% include '../components/_navbar.html' %}
+  {% include '../components/_navbar.html' %}
 
   <div class="max-w-screen-xl mx-auto p-5 sm:p-10 md:p-16 relative">
+    <!-- Blog image -->
     <div class="bg-cover bg-center text-center overflow-hidden"
-        style="min-height: 500px; background-image:url({{blog.image.url}})"
-        title="Woman holding a mug">
+         style="min-height: 500px; background-image:url({{blog.image.url}});"
+         title="Blog Image">
     </div>
 
-    <div class="max-w-3xl mx-auto">
-        <div
-            class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
-            <div class="bg-white relative top-0 -mt-32 p-5 sm:p-10">
-                <h1 href="#" class="text-gray-900 font-bold text-3xl mb-2">{{blog.title}}</h1>
-                <p class="text-gray-700 text-xs mt-2">Written By:
-                    <a href="#"
-                        class="text-indigo-600 font-medium hover:text-gray-900 transition duration-500 ease-in-out">
-                        {{blog.author}}
-                    </a>
-                </p>
-
-                <p class="text-base leading-8 my-5">
-                    {{blog.subtitle}}
-                </p>
-                <p class="text-base leading-8 my-5">
-                    {{blog.description}}
-                </p>
-                
-                <div class="flex justify-between p-4">
-                    <form action="{% url 'delete_blog' blog.id %}" method="POST" onsubmit="return confirmDelete()">
-                        {% csrf_token %}
-                        <button class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-700">Delete Blog</button>
-                    </form>
-                
-                    <form action="{% url 'edit_blog' blog.id %}">
-                        <button class="bg-yellow-400 px-4 py-2 rounded-lg hover:bg-yellow-500">Edit Blog</button>
-                    </form>
-                </div>
-            </div>
-
+    <div class="max-w-3xl mx-auto mt-10">
+      <!-- Rounded card for the blog content -->
+      <div class="bg-white rounded-lg shadow-lg p-10 flex flex-col justify-between leading-normal">
+        
+        <!-- Blog Title in the center with dynamic wrapping -->
+        <div class="text-center">
+          <h1 class="text-gray-900 font-bold text-4xl mb-2 break-words">{{blog.title}}</h1>
         </div>
+
+        <!-- Blog Subtitle in the center below the title -->
+        <div class="text-center mt-4">
+          <p class="text-gray-700 text-lg">{{blog.subtitle}}</p>
+        </div>
+
+        <!-- Author aligned to the right -->
+        <div class="mt-6 text-right">
+          <p class="text-gray-700 text-sm">Written By:
+            <a href="#" class="text-indigo-600 font-medium hover:text-gray-900 transition duration-500 ease-in-out">
+              {{blog.author}}
+            </a>
+          </p>
+        </div>
+
+        <!-- Blog Description -->
+        <div class="mt-6">
+          <p class="text-gray-700 text-base leading-8">{{ blog.description|linebreaksbr }}</p>
+        </div>
+
+        <!-- Edit and Delete buttons -->
+        <div class="flex justify-between mt-8">
+          <form action="{% url 'delete_blog' blog.id %}" method="POST" onsubmit="return confirmDelete()">
+            {% csrf_token %}
+            <button class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-700">Delete Blog</button>
+          </form>
+
+          <form action="{% url 'edit_blog' blog.id %}">
+            <button class="bg-yellow-400 px-4 py-2 rounded-lg hover:bg-yellow-500">Edit Blog</button>
+          </form>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 
-<script>
+  <script>
     function confirmDelete() {
-        return confirm("Are you sure you want to delete this blog?");
+      return confirm("Are you sure you want to delete this blog?");
     }
-</script>
-
-  
-<!-- https://play.tailwindcss.com/eCfibrSI2X -->
+  </script>
 </body>
 </html>
